After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704473 - xrandr: don't ever show a dialog for xrandr failures
xrandr: don't ever show a dialog for xrandr failures
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: xrandr
unspecified
Other All
: Normal normal
: ---
Assigned To: Debarshi Ray
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2013-07-18 14:58 UTC by Ray Strode [halfline]
Modified: 2013-07-18 17:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
xrandr: don't ever show a dialog for xrandr failures (16.69 KB, patch)
2013-07-18 14:58 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2013-07-18 14:58:40 UTC
First, we're using gtk_dialog_run which is a big no-no in a system
service (since it blocks the service).

Second, a user will be able to tell if their configuration changes
aren't working, the dialog doesn't help them.

Third, the dialogs frequently contain technobable about crtc 65
and the like.

This commit gets rid of them.
Comment 1 Ray Strode [halfline] 2013-07-18 14:58:43 UTC
Created attachment 249523 [details] [review]
xrandr: don't ever show a dialog for xrandr failures
Comment 2 Bastien Nocera 2013-07-18 15:01:02 UTC
Review of attachment 249523 [details] [review]:

Looks good apart from those 2 bits.

::: plugins/xrandr/gsd-xrandr-manager.c
@@ +1340,3 @@
 error_message (GsdXrandrManager *mgr, const char *primary_text, GError *error_to_display, const char *secondary_text)
 {
+    log_msg("%s\n%s\n%s\n",

g_warning() instead (or in addition to that)?

@@ +1380,1 @@
                 error_message (mgr, str, NULL, _("Trying to switch the monitor configuration anyway."));

I'd rather have the really crappy developer error instead of this though.
Comment 3 Ray Strode [halfline] 2013-07-18 17:05:23 UTC
Attachment 249523 [details] pushed as 0f7cbfe - xrandr: don't ever show a dialog for xrandr failures